<resources>
    <string name="app_name">My Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search Note</string>
    <string name="note_title">Note Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="type_your_note">Type Your Note...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="features">Features</string>
</resources>